Stylesheet/emote/tag updates 2013-11-04

--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -176,12 +176,13 @@ body a[href="/spoiler"]:hover{color:white!important}/* Spoiler Setter*/
 div.over18 .entry .buttons .first{padding-left: 0px}
 .footer-parent
 {
- height:1100px;
+ height:1050px;
  padding-bottom:0px;
  clear:both;
  text-align:center;
  width:100%;
- background-image:url(%%sweetie-bees%%);
+/*Footer image by /u/TheJBW*/
+ background-image:url(%%cmc-security-agency%%);
  background-repeat:no-repeat;
  margin-bottom:-80px;
  background-position: 50% 100%;
