--- a/source-css/taviquisition.css
+++ b/source-css/taviquisition.css
@@ -1493,3 +1493,331 @@ a[href|="/chibitaviagain"] {
  background-image: url(%%spritesheet9%%);
  background-position: -0px -2250px;  
 } 
+
+a[href|="/yesmaam"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 180px;
+ height: 150px;
+ background-image: url(%%spritesheet10%%);
+ background-position: -0px -0px;  
+} 
+
+a[href|="/maaaaaaaybe"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 169px;
+ height: 150px;
+ background-image: url(%%spritesheet10%%);
+ background-position: -0px -150px;  
+} 
+
+a[href|="/howaboutislapyourshit"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 172px;
+ height: 150px;
+ background-image: url(%%spritesheet10%%);
+ background-position: -0px -300px;  
+} 
+
+a[href|="/slowtavi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 160px;
+ height: 150px;
+ background-image: url(%%spritesheet10%%);
+ background-position: -0px -450px;  
+} 
+
+a[href|="/taviglare"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 160px;
+ height: 150px;
+ background-image: url(%%spritesheet10%%);
+ background-position: -0px -600px;  
+} 
+
+a[href|="/wutavia"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 150px;
+ height: 150px;
+ background-image: url(%%spritesheet10%%);
+ background-position: -0px -750px;  
+} 
+
+a[href|="/yeswordy"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 188px;
+ height: 250px;
+ background-image: url(%%spritesheet10%%);
+ background-position: -0px -900px;  
+} 
+
+a[href|="/wordy"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 169px;
+ height: 200px;
+ background-image: url(%%spritesheet11%%);
+ background-position: -0px -0px;  
+} 
+
+a[href|="/cutterpie"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 200px;
+ height: 200px;
+ background-image: url(%%spritesheet11%%);
+ background-position: -0px -200px;  
+} 
+
+a[href|="/ppskirty"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 141px;
+ height: 200px;
+ background-image: url(%%spritesheet11%%);
+ background-position: -0px -400px;  
+} 
+
+a[href|="/pppudding"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 205px;
+ height: 200px;
+ background-image: url(%%spritesheet11%%);
+ background-position: -0px -600px;  
+} 
+
+a[href|="/ppbath"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 263px;
+ height: 200px;
+ background-image: url(%%spritesheet11%%);
+ background-position: -0px -800px;  
+} 
+
+a[href|="/ravetavia"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 103px;
+ height: 150px;
+ background-image: url(%%spritesheet11%%);
+ background-position: -0px -1000px;  
+} 
+
+a[href|="/celestbraces"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 130px;
+ height: 100px;
+ background-image: url(%%lil-spritesheet%%);
+ background-position: -0px -0px;  
+} 
+
+a[href|="/chryshininglick"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 228px;
+ height: 100px;
+ background-image: url(%%lil-spritesheet%%);
+ background-position: -0px -100px;  
+} 
+
+a[href|="/classyhumantavi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 97px;
+ height: 150px;
+ background-image: url(%%lil-spritesheet%%);
+ background-position: -0px -200px;  
+} 
+
+a[href|="/scareddash"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 165px;
+ height: 150px;
+ background-image: url(%%scareddash%%);
+} 
+
+a[href|="/grumpyfillyrd"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 129px;
+ height: 150px;
+ background-image: url(%%grumpyfillyrd%%);
+} 
+
+
+a[href|="/rdcutefight"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 157px;
+ height: 200px;
+ background-image: url(%%rdcutefight%%);
+} 
+
+a[href|="/bestbelle"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 144px;
+ height: 150px;
+ background-image: url(%%spritesheet12%%);
+ background-position: -0px -0px;  
+} 
+
+a[href|="/bigmacdaiper"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 119px;
+ height: 150px;
+ background-image: url(%%spritesheet12%%);
+ background-position: -0px -150px;  
+} 
+
+a[href|="/messybraepaint"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 145px;
+ height: 150px;
+ background-image: url(%%spritesheet12%%);
+ background-position: -0px -300px;  
+} 
+
+a[href|="/bukkakebrae"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 145px;
+ height: 150px;
+ background-image: url(%%spritesheet12%%);
+ background-position: -0px -450px;  
+} 
+
+a[href|="/bmacwut"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 168px;
+ height: 150px;
+ background-image: url(%%spritesheet12%%);
+ background-position: -0px -600px;  
+} 
+
+a[href|="/braesocksfun"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 138px;
+ height: 150px;
+ background-image: url(%%spritesheet12%%);
+ background-position: -0px -750px;  
+} 
+
+a[href|="/braesexy"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 120px;
+ height: 150px;
+ background-image: url(%%spritesheet12%%);
+ background-position: -0px -900px;  
+} 
+
+a[href|="/braerainbowsocks"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 169px;
+ height: 150px;
+ background-image: url(%%spritesheet12%%);
+ background-position: -0px -1050px;  
+} 
+
+a[href|="/braemac"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 176px;
+ height: 150px;
+ background-image: url(%%spritesheet12%%);
+ background-position: -0px -1200px;  
+} 
+
+a[href|="/braeface"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 125px;
+ height: 150px;
+ background-image: url(%%spritesheet12%%);
+ background-position: -0px -1350px;  
+} 
+
+a[href|="/braecute"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 171px;
+ height: 150px;
+ background-image: url(%%spritesheet12%%);
+ background-position: -0px -1650px;  
+} 
+
+a[href|="/chibibraecolt"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 131px;
+ height: 150px;
+ background-image: url(%%spritesheet12%%);
+ background-position: -0px -1800px;  
+} 
+
+a[href|="/braebutt"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 124px;
+ height: 150px;
+ background-image: url(%%spritesheet12%%);
+ background-position: -0px -1950px;  
+} 
+
+a[href|="/braeapplesocks"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 177px;
+ height: 150px;
+ background-image: url(%%spritesheet12%%);
+ background-position: -0px -2100px;  
+} 
