--- a/source-css/tbpimagedump2.css
+++ b/source-css/tbpimagedump2.css
@@ -36,7 +36,7 @@
     }
 /*Emotes*/
 /*BPD2 emutes*/
-a[href|="/bpd30"], a[href|="/rbpd30"], a[href|="/scootsassin"], a[href|="/rscootsassin"], a[href|="/bpd31"], a[href|="/rbpd31"], a[href|="/shutterfly"], a[href|="/rshutterfly"], a[href|="/bpd32"], a[href|="/rbpd32"], a[href|="/rarpleased"], a[href|="/rrarpleased"], a[href|="/bpd33"], a[href|="/rbpd33"], a[href|="/fsfear"], a[href|="/rfsfear"],  a[href|="/bpd34"], a[href|="/rbpd34"], a[href|="/sbshake"], a[href|="/rsbshake"], a[href|="/bpd35"], a[href|="/rbpd35"], a[href|="/babssmirk"], a[href|="/rbabssmirk"], a[href|="/bpd36"], a[href|="/rbpd36"], a[href|="/trixieomg"], a[href|="/rtrixieomg"] {
+a[href|="/bpd30"], a[href|="/rbpd30"], a[href|="/scootsassin"], a[href|="/rscootsassin"], a[href|="/bpd31"], a[href|="/rbpd31"], a[href|="/shutterfly"], a[href|="/rshutterfly"], a[href|="/bpd32"], a[href|="/rbpd32"], a[href|="/rarpleased"], a[href|="/rrarpleased"], a[href|="/bpd33"], a[href|="/rbpd33"], a[href|="/fsfear"], a[href|="/rfsfear"],  a[href|="/bpd34"], a[href|="/rbpd34"], a[href|="/sbshake"], a[href|="/rsbshake"], a[href|="/bpd35"], a[href|="/rbpd35"], a[href|="/babssmirk"], a[href|="/rbabssmirk"], a[href|="/bpd36"], a[href|="/rbpd36"], a[href|="/trixieomg"], a[href|="/rtrixieomg"], a[href|="/bpd37"], a[href|="/rbpd37"], a[href|="/twilove"], a[href|="/rtwilove"] {
     display: block; 
     clear: none;
     float: left;
@@ -85,4 +85,10 @@ a[href|="/bpd36"], a[href|="/trixieomg"] {
     }
 a[href|="/rbpd36"], a[href|="/rtrixieomg"] {
     background-position: -210px -420px
+    }
+a[href|="/bpd37"], a[href|="/twilove"] {
+    background-position: -0px -490px
+    }
+a[href|="/rbpd37"], a[href|="/rtwilove"] {
+    background-position: -210px -490px
     }
