--- a/source-css/thebestpony.css
+++ b/source-css/thebestpony.css
@@ -2358,6 +2358,28 @@ a[href|="/manliestherowithnotesticles"] {
 a[href|="/manliestherowithnotesticles"] {
     background-position: -573px -0px
     }
+a[href|="/lookatitgo"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 100px;
+    height: 70px;
+    background-image: url(%%secretemotes%%)
+    }
+a[href|="/lookatitgo"] {
+    background-position: -573px -70px
+    }
+a[href|="/sexyils"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 100px;
+    height: 124px;
+    background-image: url(%%secretemotes%%)
+    }
+a[href|="/sexyils"] {
+    background-position: -573px -140px
+    }
 a[href|="/emyscoot"] {
     display: block;
     clear: none;
