--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -430,22 +430,25 @@ a[href|="/lpstretch"]{ background-position: -200px -980px; width: 171px; height:
 a[href|="/lpdisgust"]{ background-position: -200px -1180px; width: 146px; height: 150px; }
 a[href|="/lpheroic"]{ background-position: -200px -1380px; width: 123px; height: 150px; }
 
-a[href|="/lpdowncast"], a[href|="/steelhoovesrear"], a[href|="/rampagesmug"], a[href|="/lpsup"], a[href|="/pyrelight"], a[href|="/lpconfident"], a[href|="/bjshrug"], a[href|="/velvetshrug"]
+a[href|="/lpdowncast"], a[href|="/steelhoovesrear"], a[href|="/rampagesmug"], a[href|="/lpsup"], a[href|="/pyrelight"], a[href|="/lpconfident"], a[href|="/bjshrug"], a[href|="/velvetshrug"], a[href|="/bjdisgust"], a[href|="/gloryfun"], a[href|="/velvetbedroomeyes"]
 {
 display: block;
 clear: none;
 float: left;
 background-repeat: no-repeat;
-background-image: url(%%foe-em7-v07%%);
+background-image: url(%%foe-em7-v09%%);
 }
 a[href|="/lpdowncast"]{ background-position: -0px -0px; width: 172px; height: 150px; }
 a[href|="/steelhoovesrear"]{ background-position: 0 -200px; width: 120px; height: 175px; }
 a[href|="/rampagesmug"]{ background-position: 0 -425px; width: 67px; height: 70px; }
-a[href|="/lpsup"]{ background-position: 0 -545px; width: 86px; height: 70px; }
-a[href|="/pyrelight"]{ background-position: 0 -665px; width: 117px; height: 100px; }
-a[href|="/lpconfident"]{ background-position: 0 -815px; width: 65px; height: 70px; }
-a[href|="/bjshrug"]{ background-position: 0 -935px; width: 73px; height: 70px; }
-a[href|="/velvetshrug"]{ background-position: 0 -1055px; width: 71px; height: 70px; }
+a[href|="/lpsup"]{ background-position: 0 -545px; width: 123px; height: 100px; }
+a[href|="/pyrelight"]{ background-position: 0 -695px; width: 117px; height: 100px; }
+a[href|="/lpconfident"]{ background-position: 0 -845px; width: 65px; height: 70px; }
+a[href|="/bjshrug"]{background-position: 0 -965px; width: 73px; height: 70px; }
+a[href|="/velvetshrug"]{ background-position: 0 -1085px; width: 71px; height: 70px; }
+a[href|="/bjdisgust"]{ background-position: 0 -1205px; width: 105px; height: 150px; }
+a[href|="/gloryfun"]{ background-position: 0 -1405px; width: 244px; height: 130px; }
+a[href|="/velvetbedroomeyes"]{ background-position: 0 -1585px; width: 112px; height: 150px; }
 
 a[href|="/advicebj"]
 {
