--- a/source-css/themirishponies.css
+++ b/source-css/themirishponies.css
@@ -1380,7 +1380,7 @@ Height: 100px;
 
 /* Other Emotes */
 
-a[href|="/flutterface"], a[href|="/thatirishfella"]
+a[href|="/flutterface"], a[href|="/thatirishfella"], a[href|="/rocketmac"]
 {display:block;clear:none;float:left;background-image:url(%%Other%%)}
 
 a[href="/flutterface"] {
@@ -1393,6 +1393,12 @@ a[href="/thatirishfella"] {
 background-position: -150px -0px;
 Width: 150px;
 Height: 181px;
+}
+
+a[href="/rocketmac"] {
+background-position: -300px -0px;
+Width: 254px;
+Height: 150px;
 }
 
 
