Stylesheet/emote/tag updates 2013-11-10

--- a/source-css/berrytubelounge.css
+++ b/source-css/berrytubelounge.css
@@ -128,7 +128,8 @@ a.author[href$="div_"],
 a.author[href$="di_zz"],
 a.author[href$="arborcide"],
 a.author[href$="motbob"],
-a.author[href$="Rosindust89"]
+a.author[href$="Rosindust89"],
+a.author[href$="batsomething"]
 { 
 font-size:0!important; 
 overflow:hidden; 
@@ -148,7 +149,8 @@ a.author[href$="div_"]:before,
 a.author[href$="di_zz"]:before,
 a.author[href$="arborcide"]:before,
 a.author[href$="motbob"]:before,
-a.author[href$="Rosindust89"]:before
+a.author[href$="Rosindust89"]:before,
+a.author[href$="batsomething"]:before
 {
 font-size:10px!important; 
 visibility:visible!important;
@@ -167,6 +169,7 @@ a.author[href$="div_"]:before { content:"wut" }
 a.author[href$="arborcide"]:before { content:"Sly_Clopper" }
 a.author[href$="motbob"]:before { content:"Littlecolt" }
 a.author[href$="Rosindust89"]:before { content:"FlutterPie" }
+a.author[href$="batsomething"]:before { content:"mc_square" }
 
 /*Spoiler tag within comments. Your comment should be: "[This is a spoiler sentence.](/spoiler)" */  
 a[href$="/spoiler"] {  
