--- a/source-css/mylittledurian.css
+++ b/source-css/mylittledurian.css
@@ -5,6 +5,18 @@ div.titlebox .subscribers span.number:after {content:" Spikes"}
 div.titlebox .users-online span.number:after {content:" Spiking"}
 
 /*Header sticking on the "ground"*/
+
+#header-img-a
+{
+ height:5px;
+ position:relative;
+ bottom:0px;
+ left:0;
+ top:0;
+ margin-right:-10px;
+ padding:0
+}
+
 #header-img
 {
  margin:5px 3px -3px 0px;
