--- a/source-css/mylittlemilkyway.css
+++ b/source-css/mylittlemilkyway.css
@@ -199,7 +199,16 @@ a[href|="/milkymic"]
     width: 294px;
 }
 
+a[href|="/milkydance"]
+{
 
+ background-image: url(%%milkydance%%);
+    clear: none;
+    display: block;
+    float: left;
+    height: 300px;
+    width: 233px;
+}
 
 
 /*** Title Box ***/
