--- a/source-css/mylittlenosleep.css
+++ b/source-css/mylittlenosleep.css
@@ -1,5 +1,4 @@
 
-
 /* EvilHom3r did shit here */
 
 /* Change color of selected/linked comment */
@@ -886,7 +885,7 @@ background-position: -150px -400px;
 a[href="/nsb39"] {
 background-position: -150px -450px;
 }
-a[href="/17eudq"] {
+a[href="/1plagh"] {
 display: block;
 clear: none;
 float: left;
