--- a/source-css/marmemotes.css
+++ b/source-css/marmemotes.css
@@ -1178,6 +1178,8 @@ a[href|="/indignantluna"],
 a[href|="/fascinating"],
 a[href|="/honesty"],
 a[href|="/howyoudoin"],
+a[href|="/classytoast"],
+a[href|="/teatimetoast"],
 a[href|="/literallybrohoof"],
 a[href|="/abhowyoudoin"],
 a[href|="/pootishorn"],
@@ -1274,6 +1276,12 @@ a[href|="/howyoudoin"]
 {
 	width: 155px;
 	background-position: -198px -560px;
+}
+a[href|="/classytoast"],
+a[href|="/teatimetoast"]
+{
+	width: 83px;
+	background-position: -353px -560px;
 }
 a[href|="/literallybrohoof"]
 {
