--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -432,7 +432,7 @@ a.author[href$="Dundrioundio"]:after
 a.author[href$="Sangfroidish"]:after { content:" Lost his personal divining rod "}
 a.author[href$="sna_fu_bar"]:after {content:" Sneaky squid "}
 a.author[href$="DoomedCivilian"]:after { content:" CSS Puppet Master and lesser Demigod "}
-a.author[href$="Draze"]:after { content: " Leader of the Dark Bronies "}
+a.author[href$="Draze"]:after { content: " Prince of the Dark Bronies "}
 a.author[href$="TheCommieDuck"]:after {content:" 9/10 10yo "}
 a.author[href$="duruz"]:after { content: " Still doesn't oil up "}
 a.author[href$="starkinmn"]:after { content: " Give me my fucking good flair, asshooe horsefuckers "}
