--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -149,10 +149,10 @@ border-top-right-radius: 5px;
 
 #header-img
 {
- margin:0px 5px -12px 0px;
+ margin:0px 0px -12px 0px;
  position:relative;
- top:5px;
- left:6px;
+ top:9px;
+ left:0px;
 }
 #header-bottom-left{padding-top:20px}
 .pagename {font-size:12pt}
@@ -213,15 +213,15 @@ border-top-right-radius: 5px;
 .thumbnail.default{ background-position:0px -70px!important}
 .thing[data-fullname$="d"] .thumbnail.nsfw,.thing[data-fullname$="i"] .thumbnail.nsfw,.thing[data-fullname$="s"] .thumbnail.nsfw,.thing[data-fullname$="c"] .thumbnail.nsfw,.thing[data-fullname$="e"] .thumbnail.nsfw,
 .thing[data-fullname$="n"] .thumbnail.nsfw,.thing[data-fullname$="t"] .thumbnail.nsfw,.thing[data-fullname$="a"] .thumbnail.nsfw{background-position:0px -170px!important}
-.sidecontentbox a.author.id-t2_3l5j0 ,.sidecontentbox a.author.id-t2_4a7lu ,.sidecontentbox a.author.id-t2_4f80o ,.sidecontentbox a.author.id-t2_5agom ,.sidecontentbox a.author.id-t2_51isb ,.sidecontentbox a.author.id-t2_5eqe2,.sidecontentbox a.author.id-t2_6uo3t, .sidecontentbox a.author.id-t2_5dxi7, .sidecontentbox a.author.id-t2_55ojn, .sidecontentbox a.author.id-t2_3fvpf, .sidecontentbox ul.content li.more a {content:"";color:white;font-size:0pt;display:block}
-.sidecontentbox a.author.id-t2_3l5j0:before ,.sidecontentbox a.author.id-t2_4a7lu:before ,.sidecontentbox a.author.id-t2_4f80o:before ,.sidecontentbox a.author.id-t2_5agom:before ,.sidecontentbox a.author.id-t2_51isb:before ,.sidecontentbox a.author.id-t2_51isb:after ,.sidecontentbox a.author.id-t2_5eqe2:before, .sidecontentbox a.author.id-t2_6uo3t:before, .sidecontentbox a.author.id-t2_55ojn:before, .sidecontentbox a.author.id-t2_5dxi7:before, .sidecontentbox a.author.id-t2_3fvpf:before, .sidecontentbox ul.content li.more a:before {font-size:10pt;color:#369;display:inline-block;}
+.sidecontentbox a.author.id-t2_3l5j0 ,.sidecontentbox a.author.id-t2_4a7lu ,.sidecontentbox a.author.id-t2_4f80o ,.sidecontentbox a.author.id-t2_5agom ,.sidecontentbox a.author.id-t2_51isb ,.sidecontentbox a.author.id-t2_5eqe2,.sidecontentbox a.author.id-t2_6uo3t, .sidecontentbox a.author.id-t2_5dxi7, .sidecontentbox a.author.id-t2_3fvpf, .sidecontentbox ul.content li.more a {content:"";color:white;font-size:0pt;display:block}
+.sidecontentbox a.author.id-t2_3l5j0:before ,.sidecontentbox a.author.id-t2_4a7lu:before ,.sidecontentbox a.author.id-t2_4f80o:before ,.sidecontentbox a.author.id-t2_5agom:before ,.sidecontentbox a.author.id-t2_51isb:before ,.sidecontentbox a.author.id-t2_51isb:after ,.sidecontentbox a.author.id-t2_5eqe2:before, .sidecontentbox a.author.id-t2_6uo3t:before, .sidecontentbox a.author.id-t2_5dxi7:before, .sidecontentbox a.author.id-t2_3fvpf:before, .sidecontentbox ul.content li.more a:before {font-size:10pt;color:#369;display:inline-block;}
 .sidecontentbox a.author.id-t2_3l5j0:before {content:"Lebal of the House of Usher"}
 .sidecontentbox a.author.id-t2_4a7lu:before {content:"Orsch Mannos: The Hands of Fate"}
-.sidecontentbox a.author.id-t2_55ojn:before {content:"Rainbow Brite"}
+/*.sidecontentbox a.author.id-t2_55ojn:before {content:"Rainbow Brite"}*/
 .sidecontentbox a.author.id-t2_4f80o:before {content:"Opti"}
 .sidecontentbox a.author.id-t2_5agom:before {content:"Chinchy-bon"}
-.sidecontentbox a.author.id-t2_51isb:before {content:"TrixieOf_Trixtegria"}
-.sidecontentbox a.author.id-t2_51isb:after {content:" (oh and also Trixie is a horse.)"; font-size:8px; padding-left:10px;}
+.sidecontentbox a.author.id-t2_51isb:before {content:"Trixie Heartstrings"}
+.sidecontentbox a.author.id-t2_51isb:after {content:" (married to the pwetty chinchess)"; font-size:8px; padding-left:10px;}
 .sidecontentbox a.author.id-t2_5eqe2:before {content:"Pathogen-David Hasselhoff"}
 .sidecontentbox a.author.id-t2_3fvpf:before {content:"The Velour Frog"}
 .sidecontentbox a.author.id-t2_6uo3t:before {content:"spokesthebrony"}
@@ -1334,4 +1334,4 @@ display: none !important;
 .res-nightmode .report-button:hover:before {
     background-color: #000;
 }
-div.content{margin-top:10px}
+div.content{margin-top:15px}
